<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".GalleryOverview"
      xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:id="@+id/action_edit"
	      android:title="@string/action_edit"
	      android:icon="@drawable/ic_action_drawer_edit"
	      android:showAsAction="always"/>

	<item android:id="@+id/action_search"
	      android:title="@string/action_search"
	      android:icon="@drawable/ic_action_search"
	      app:showAsAction="always|collapseActionView"
	      app:actionViewClass="android.support.v7.widget.SearchView"/>

	<item android:id="@+id/action_settings"
	      android:title="@string/action_settings"
	      android:orderInCategory="100"
	      android:showAsAction="never"/>
</menu>
