<?xml version="1.0" encoding="utf-8"?>

<!-- layout for items where the inner view hasn't been set -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="@dimen/card_thumb_height"
                android:background="@drawable/card_selector">

	<com.android.volley.toolbox.NetworkImageView
			android:id="@+id/manga_thumb"
			android:layout_width="@dimen/card_thumb_width"
			android:layout_height="@dimen/card_thumb_height"
			android:layout_alignParentTop="true"
			android:layout_alignParentLeft="true"
			android:adjustViewBounds="true"
			android:scaleType="fitCenter"
			android:src="@drawable/actionbar_icon"
			android:contentDescription="@string/thumb_description"/>

	<TextView
			android:id="@+id/manga_title"
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:layout_toRightOf="@id/manga_thumb"
			android:layout_alignParentTop="true"
			android:layout_marginTop="@dimen/item_padding"
			android:layout_marginLeft="@dimen/item_padding"
			android:textSize="@dimen/title_text_size"
			android:textStyle="bold"
			android:maxLines="1"/>

	<TextView
			android:id="@+id/manga_author"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/manga_title"
			android:layout_alignLeft="@id/manga_title"
			android:layout_marginTop="@dimen/item_margin"
			android:maxLines="1"/>

	<TextView
			android:id="@+id/manga_tags"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/manga_author"
			android:layout_alignLeft="@id/manga_author"
			android:layout_marginTop="@dimen/item_margin"
			android:maxLines="1"/>

	<ImageView
			android:id="@+id/manga_favorite"
			android:layout_width="@dimen/card_button_size"
			android:layout_height="@dimen/card_button_size"
			android:layout_alignParentBottom="true"
			android:layout_toLeftOf="@id/manga_overflow"
			android:src="@drawable/ic_action_favorite"
			android:scaleType="fitCenter"
			android:clickable="true"
			android:background="@drawable/button_selector"
			android:padding="@dimen/item_padding"
			android:contentDescription="@string/favorite_description"/>

	<ImageView
			android:id="@+id/manga_overflow"
			android:layout_width="@dimen/card_button_size"
			android:layout_height="@dimen/card_button_size"
			android:layout_alignParentBottom="true"
			android:layout_alignParentRight="true"
			android:src="@drawable/ic_menu_overflow_normal_holo_light"
			android:scaleType="fitCenter"
			android:clickable="true"
			android:background="@drawable/button_selector"
			android:padding="@dimen/item_padding"
			android:contentDescription="@string/overflow_description"/>

</RelativeLayout>